--- a/src/tex/colosseo_3_nuweb.tex
+++ b/src/tex/colosseo_3_nuweb.tex
@@ -295,7 +295,7 @@ Ora vogliamo invece definire un tipo (o una struttura) con le coordinate spazial
 Nell'esempio seguente introduciamo il tipo Pedone e costruiamo un array di pedoni inizializzati a {\tt PEDONE\_DEFAULT}
 \begin{flushleft} \small
 \begin{minipage}{\linewidth} \label{scrap6}
-\protect\makebox[0ex][r]{\NWtarget{nuweb4}{\rule{0ex}{0ex}}\hspace{1em}}\verb@"../../test/jl/pedone_test.jl"@\nobreak\ {\footnotesize 4 }$\equiv$
+\protect\makebox[0ex][r]{\NWtarget{nuweb4a}{\rule{0ex}{0ex}}\hspace{1em}}\verb@"../../test/jl/pedone_test.jl"@\nobreak\ {\footnotesize 4a }$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -319,7 +319,40 @@ Nell'esempio seguente introduciamo il tipo Pedone e costruiamo un array di pedon
 \mbox{}\verb@end@\\
 \mbox{}\verb@@{\NWsep}
 \end{list}
-\vspace{-2ex}
+\vspace{-1ex}
+\footnotesize\addtolength{\baselineskip}{-1ex}
+\begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
+\item \NWtxtFileDefBy\ \NWlink{nuweb4a}{4a}\NWlink{nuweb4b}{b}.
+\end{list}
+\end{minipage}\\[4ex]
+\end{flushleft}
+\subsection{la funzione posizioni}
+Definiamo una funzione che prende lo stato della popolazione di $N$ individui, che è un array di Statopedone e restituisce la matrice $2\times N$ delle posizioni.
+Questa funzione sarà utile per calcolare la sovrapposizione delle posizioni con i metodi di NearestNeighbors
+\begin{flushleft} \small
+\begin{minipage}{\linewidth} \label{scrap7}
+\protect\makebox[0ex][r]{\NWtarget{nuweb4b}{\rule{0ex}{0ex}}\hspace{1em}}\verb@"../../test/jl/pedone_test.jl"@\nobreak\ {\footnotesize 4b }$\equiv$
+\vspace{-1ex}
+\begin{list}{}{} \item
+\mbox{}\verb@@\\
+\mbox{}\verb@ function posizioni(stato)@\\
+\mbox{}\verb@       lex = []@\\
+\mbox{}\verb@       ley = []@\\
+\mbox{}\verb@       for i=1:N@\\
+\mbox{}\verb@           push!(lex,stato[i].lax)@\\
+\mbox{}\verb@       end@\\
+\mbox{}\verb@       for i=1:N@\\
+\mbox{}\verb@           push!(ley,stato[i].lay)@\\
+\mbox{}\verb@       end@\\
+\mbox{}\verb@       return transpose([lex ley])@\\
+\mbox{}\verb@       end@\\
+\mbox{}\verb@@{\NWsep}
+\end{list}
+\vspace{-1ex}
+\footnotesize\addtolength{\baselineskip}{-1ex}
+\begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
+\item \NWtxtFileDefBy\ \NWlink{nuweb4a}{4a}\NWlink{nuweb4b}{b}.
+\end{list}
 \end{minipage}\\[4ex]
 \end{flushleft}
 \bibliographystyle{plain}
